2026-01-20  Bruno Haible <bruno@clisp.org>

	* sboxes.am: Fix portability problem involving BSD Make.  Define
	`sboxes_builddir` macro without interpolating `top_builddir`.
	groff does not use recursive make; all file specifications are
	resolved relative to the top of the build tree, so the
	interpolation is unnecessary, and with BSD Make it causes
	spurious failures because that implementation uses strings, not
	file identities, as the nodes of its dependency graph.  So if
	you ask for "foo" to be built but have only a rule for a target
	named "./foo", BSD Make fails, whereas GNU Make does not.

2025-12-31  G. Branden Robinson <g.branden.robinson@gmail.com>

	* sboxes.am (EXTRA_DIST): Ship "COPYRIGHT" file in distribution
	archive.

2023-02-18  G. Branden Robinson <g.branden.robinson@gmail.com>

	* sboxes.am (uninstall_sboxes): Clean more fastidiously; try to
	remove the configured `sboxespdfdocdir` in the event it is
	empty, but do not fail if it isn't.  (It can be a directory
	shared with other groff components; we don't know in what order
	the uninstall targets will serialize, but the last one run
	should succeed.)

2022-10-23  G. Branden Robinson <g.branden.robinson@gmail.com>

	* sboxes.tmac: Escape newline after opening conditional block.

2022-05-20  G. Branden Robinson <g.branden.robinson@gmail.com>

	* sboxes.am: Rename `BUILD_PDFDOC` to `USE_GROPDF`.

2022-05-01  G. Branden Robinson <g.branden.robinson@gmail.com>

	* sboxes.am ($(sboxes_builddir)/msboxes.pdf): Depend on new name
	for devpdf stamp file.

2022-04-03  Ingo Schwarze <schwarze@openbsd.org>

	* sboxes.am: msboxes.ms is documentation, not merely an example.
	Consequently, install msboxes.ms unconditionally and msboxes.pdf
	if BUILD_PDFDOC is enabled, both to the documentation directory
	rather than to the examples directory.

2022-04-02  Ingo Schwarze <schwarze@openbsd.org>

	* sboxes.am: Stop installing msboxes.ms.in;
	installing msboxes.ms and msboxes.pdf is enough.
